Fix double border

--- a/packages/block-editor/src/components/block-toolbar/style.scss
+++ b/packages/block-editor/src/components/block-toolbar/style.scss
@@ -55,7 +55,9 @@
 	> :last-child .components-toolbar,
 	// If the last toolbar group is empty,
 	// we need to remove the double border from the penultimate one.
-	&:has(> :last-child:empty) > :nth-last-child(2) {
+	&:has(> :last-child:empty) > :nth-last-child(2),
+	&:has(> :last-child:empty) > :nth-last-child(2) .components-toolbar-group,
+	&:has(> :last-child:empty) > :nth-last-child(2) .components-toolbar {
 		border-right: none;
 	}
 
